<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.dreamlike</groupId>
        <artifactId>leydenPlayground</artifactId>
        <version>0.0.1</version>
    </parent>

    <artifactId>leyden-simple</artifactId>

    <properties>
        <java.version>22</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>io.github.dreamlike.Main</main.class>
    </properties>
    <profiles>
        <profile>
            <id>native-release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.9.28</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <buildArgs>
                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-preview</buildArg>
                                <buildArg>-O3</buildArg>
                                <buildArg>--gc=G1</buildArg>
                                <buildArg>-march=native</buildArg>
                                <buildArg>--initialize-at-build-time=DynamicEntryLeydenCaseTestCase,io.github.dreamlike</buildArg>
                            </buildArgs>
                            <skipNativeTests>true</skipNativeTests>
                            <mainClass>${main.class}</mainClass>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>native-debug</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.9.28</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <buildArgs>
                                <buildArg>--pgo-instrument</buildArg>
                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-preview</buildArg>
                                <buildArg>-Ob</buildArg>
                                <buildArg>-g</buildArg>
                            </buildArgs>
                            <skipNativeTests>true</skipNativeTests>
                            <mainClass>${main.class}</mainClass>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>native-static</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.9.28</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <buildArgs>
                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-preview</buildArg>
                                <buildArg>--features=${graal.feature}</buildArg>
                                <buildArg>-Ob</buildArg>
                                <buildArg>-H:+ForeignAPISupport</buildArg>
                                <buildArg>-g</buildArg>
                                <buildArg>--static</buildArg>
                                <buildArg>--libc=musl</buildArg>
                            </buildArgs>
                            <skipNativeTests>true</skipNativeTests>
                            <mainClass>${main.class}</mainClass>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>


    </profiles>
    <dependencies>
        <dependency>
            <groupId>io.github.dreamlike</groupId>
            <artifactId>leyden-compile-enhance</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <annotationProcessors>
                        <annotationProcessor>io.github.dreamlike.LeydenCompileProcessor</annotationProcessor>
                    </annotationProcessors>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${main.class}</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <outputFile>${project.build.directory}/${project.artifactId}-fat.jar
                            </outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>


</project>